# controllers/users.js
@@ -1,0 +1,91 @@
+const mongodb = require('../db/connect');
+const ObjectId = require('mongodb').ObjectId;
+
+// GET ALL USERS
+const getAll = async (req, res) => {
+  try {
+    const result = await mongodb.getDb().db().collection('users').find();
+    const lists = await result.toArray();
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(lists);
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+// GET SINGLE USER
+const getSingle = async (req, res) => {
+  try {
+    const userId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().db().collection('users').find({ _id: userId });
+    const lists = await result.toArray();
+    if (lists.length > 0) {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists[0]);
+    } else {
+      res.status(404).json({ message: 'User not found' });
+    }
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+// CREATE USER
+const createUser = async (req, res) => {
+  try {
+    const user = {
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
+      email: req.body.email,
+      favoriteColor: req.body.favoriteColor,
+      birthday: req.body.birthday
+    };
+    const response = await mongodb.getDb().db().collection('users').insertOne(user);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    } else {
+      res.status(500).json('Some error occurred while creating the user.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+// UPDATE USER
+const updateUser = async (req, res) => {
+  try {
+    const userId = new ObjectId(req.params.id);
+    const user = {
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
+      email: req.body.email,
+      favoriteColor: req.body.favoriteColor,
+      birthday: req.body.birthday
+    };
+    const response = await mongodb.getDb().db().collection('users').replaceOne({ _id: userId }, user);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json('Some error occurred while updating the user.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+// DELETE USER
+const deleteUser = async (req, res) => {
+  try {
+    const userId = new ObjectId(req.params.id);
+    const response = await mongodb.getDb().db().collection('users').deleteOne({ _id: userId });
+    if (response.deletedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json('Some error occurred while deleting the user.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+module.exports = { getAll, getSingle, createUser, updateUser, deleteUser };
